--- a/Test_App/MainPage.xaml
+++ b/Test_App/MainPage.xaml
@@ -35,10 +35,12 @@
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
             <Label
-                Text="Привет!"
+               
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I"
                 FontSize="18"
+                Text=""
+           
                 HorizontalOptions="Center" />
             <Button
                 x:Name="CounterBts"
