--- a/Test_App/MainPage.xaml
+++ b/Test_App/MainPage.xaml
@@ -3,38 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Test_App.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
+
+  
+    <VerticalStackLayout
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+      
 
-            <Label
+        <Label
                 Text="Hello, World!"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
-            <Label
+        <Label
                 Text="Welcome to .NET Multi-platform App UI"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I"
                 FontSize="18"
                 HorizontalOptions="Center" />
 
-            <Button
+        <Button
                 x:Name="CounterBtn"
                 Text="Click me"
+                Margin="10"
+                Padding="10"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
-            <Label
+        <Label
                
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I"
@@ -42,17 +41,18 @@
                 Text=""
            
                 HorizontalOptions="Center" />
-            <Button
+        <Button
                 x:Name="CounterBts"
                 Text="Click me"
                 Clicked="CounterBts_Clicked"
                 TextColor="White"
-                VerticalOptions="Start" WidthRequest="90" HeightRequest="30"
+                VerticalOptions="Start" WidthRequest="40" HeightRequest="30"
                 Margin="50"
                 Padding="50"
                 HorizontalOptions="CenterAndExpand" />
 
-        </VerticalStackLayout>
-    </ScrollView>
-
+    </VerticalStackLayout>
+    
+    
+    
 </ContentPage>
