--- a/Client/Вход в учетную запись.xaml
+++ b/Client/Вход в учетную запись.xaml
@@ -4,53 +4,68 @@
              x:Class="Client.Вход_в_учетную_запись"
              Title="Вход_в_учетную_запись">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" 
-        />
-        
-        <Button 
-            Text="Нажать"
-            Clicked="Button_Clicked"
-            Margin="10"
-        />
-
-        <Entry x:Name="nameEntry3" FontSize="22"
+        <Entry x:Name="nameEntry3" FontSize="16"
               TextChanged="nameEntry1_TextChanged_2"
-               
               Placeholder ="Введите имя"
+             VerticalOptions="Fill"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="310"
               Keyboard="Text"
-              Margin="20"
+              Margin="10"
              />
 
-        <Entry x:Name="nameEntry" FontSize="22"
+        <Entry x:Name="nameEntry" FontSize="16"
               TextChanged="nameEntry_TextChanged"
               Placeholder ="Введите электроную почту"
               Keyboard="Email"
-              Margin="20"
+              Margin="10"
+             VerticalOptions="Center"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="310"
              />
 
-        <Entry x:Name="nameEntry1" FontSize="22"
+        <Entry x:Name="nameEntry1" FontSize="16"
              Placeholder ="Введите пароль"
              Margin="20"
+             VerticalOptions="Fill"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="310"
              TextChanged="nameEntry1_TextChanged"
              Keyboard ="Text"
         />
 
-        <Entry x:Name="nameEntry2" FontSize="22"
+        <Entry x:Name="nameEntry2" FontSize="16"
              Placeholder ="Введите пароль"
-             Margin="20"
+             Margin="10"
              TextChanged="nameEntry2_TextChanged"
+             VerticalOptions="Fill"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="310"
              Keyboard ="Text"
         />
 
-        <Entry x:Name="nameEntry4" FontSize="22"
+        <Entry x:Name="nameEntry4" FontSize="16"
              Placeholder ="Дать  Разрешение пиши 1 если нет 0"
-             Margin="20"
+             Margin="10"
              TextChanged="nameEntry4_TextChanged"
-               
+             VerticalOptions="Fill"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="310"
              Keyboard ="Text"
+        />
+        <Button 
+            Text="Зарегистроваться"
+            Clicked="Button_Clicked"
+            Margin="10"
+             VerticalOptions="Fill"
+             HorizontalOptions="Fill"
+             HeightRequest="20"
+             WidthRequest="190"
         />
     </VerticalStackLayout>
 </ContentPage>
