--- a/Client/Вход в учетную запись.xaml
+++ b/Client/Вход в учетную запись.xaml
@@ -2,35 +2,35 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Вход_в_учетную_запись"
-             Title="Вход_в_учетную_запись">
+             Title="Регистрация">
     <VerticalStackLayout>
         <Entry x:Name="nameEntry3" FontSize="16"
               TextChanged="nameEntry1_TextChanged_2"
               Placeholder ="Введите имя"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="310"
               Keyboard="Text"
-              Margin="10"
+              Margin="30"
              />
 
         <Entry x:Name="nameEntry" FontSize="16"
               TextChanged="nameEntry_TextChanged"
               Placeholder ="Введите электроную почту"
               Keyboard="Email"
-              Margin="10"
+              Margin="30"
              VerticalOptions="Center"
-             HorizontalOptions="Fill"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="310"
              />
 
         <Entry x:Name="nameEntry1" FontSize="16"
              Placeholder ="Введите пароль"
-             Margin="20"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             Margin="30"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="310"
              TextChanged="nameEntry1_TextChanged"
@@ -41,8 +41,8 @@
              Placeholder ="Введите пароль"
              Margin="10"
              TextChanged="nameEntry2_TextChanged"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="310"
              Keyboard ="Text"
@@ -50,10 +50,10 @@
 
         <Entry x:Name="nameEntry4" FontSize="16"
              Placeholder ="Дать  Разрешение пиши 1 если нет 0"
-             Margin="10"
+             Margin="30"
              TextChanged="nameEntry4_TextChanged"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="310"
              Keyboard ="Text"
@@ -61,9 +61,9 @@
         <Button 
             Text="Зарегистроваться"
             Clicked="Button_Clicked"
-            Margin="10"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+            Margin="30"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
              HeightRequest="20"
              WidthRequest="190"
         />
