--- a/Client/Администратор.xaml
+++ b/Client/Администратор.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Главная_страница"
-             Title="Главная_страница ">
+             x:Class="Client.Администратор"
+             Title="Администратор">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
