--- a/Client/Администратор.xaml
+++ b/Client/Администратор.xaml
@@ -4,9 +4,21 @@
              x:Class="Client.Администратор"
              Title="Администратор">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+
+    
+            <StackLayout Padding="8">
+                <Label x:Name="header" Text="Выберите Тест" FontSize="18"
+                       SizeChanged="header_SizeChanged"
+                       />
+                <Picker x:Name="languagePicker" Title = "Тест"
+                SelectedIndexChanged="PickerSelectedIndexChanged">
+                    <Picker.Items>
+                        
+                    </Picker.Items>
+                </Picker>
+            </StackLayout>
+       
+        
+
     </VerticalStackLayout>
 </ContentPage>
