--- a/Client/NewPage1.xaml
+++ b/Client/NewPage1.xaml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Администратор"
-             Title="Администратор">
+             x:Class="Client.NewPage1"
+             Title="NewPage1">
     <VerticalStackLayout>
+        <Label 
+            Text="Welcome to .NET MAUI!"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+     
+        <Entry x:Name="nameEntry2" FontSize="16"
+             Placeholder ="Введите пароль"
+             Margin="10"
+             TextChanged="nameEntry2_TextChanged"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
+             HeightRequest="20"
+             WidthRequest="310"
+             Keyboard ="Text"
+        />
 
-    
-            <StackLayout Padding="8">
-                <Label x:Name="header" Text="Выберите Тест" FontSize="18"
-                       SizeChanged="header_SizeChanged"
-                       />
-                <Picker x:Name="languagePicker" Title = "Тест"
-                SelectedIndexChanged="PickerSelectedIndexChanged">
-                    <Picker.Items>
-                        
-                    </Picker.Items>
-                </Picker>
-            </StackLayout>
 
-           <Button
+        <Button
                 x:Name="CounterLog1"
                  Text="Создать тест"
                  SemanticProperties.Hint="Counts the number of times you click"
@@ -30,8 +33,5 @@
                 Margin="10"
                 Padding="10"
              />
-
-
-
     </VerticalStackLayout>
 </ContentPage>
