--- a/Client/Вход в учетную запись.xaml
+++ b/Client/Вход в учетную запись.xaml
@@ -2,13 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Вход_в_учетную_запись"
-             Title ="Регистрация" BackgroundColor="White" >
+             Title ="Регистрация" BackgroundColor="White" 
+             Loaded="ContentPage_Loaded">
 
     <VerticalStackLayout
      Padding="5">
 
         <Grid >
-            <Border Stroke="Gray" BackgroundColor="#e1e1e1" WidthRequest="400" HeightRequest="630">
+            <Border Stroke="Gray" BackgroundColor="#e1e1e1" WidthRequest="400" HeightRequest="425">
                 
                 <StackLayout Padding="0" Margin="10" BackgroundColor="White" >
                        
@@ -21,14 +22,15 @@
                             HeightRequest="20"
                             WidthRequest="310"
                             Keyboard="Text"
-                            Margin="30"
+                            Margin="0, 20, 0,0"
+
                            />
 
                          <Entry x:Name="nameEntry" FontSize="16"
                           TextChanged="nameEntry_TextChanged"
                           Placeholder ="Введите электроную почту"
                           Keyboard="Email"
-                          Margin="30"
+                           Margin="0, 20, 0,0"
                           VerticalOptions="Center"
                           HorizontalOptions="Center"
                           HeightRequest="20"
@@ -37,7 +39,7 @@
 
                           <Entry x:Name="nameEntry1" FontSize="16"
                            Placeholder ="Введите пароль"
-                           Margin="30"
+                           Margin="0, 20, 0,0"
                            VerticalOptions="Center"
                            HorizontalOptions="Center"
                            HeightRequest="20"
@@ -48,7 +50,7 @@
 
                           <Entry x:Name="nameEntry2" FontSize="16"
                             Placeholder ="Введите пароль"
-                            Margin="10"
+                        Margin="0, 20, 0,0"
                             TextChanged="nameEntry2_TextChanged"
                             VerticalOptions="Center"
                             HorizontalOptions="Center"
@@ -62,21 +64,21 @@
                        <Label x:Name="header"
                         Text="Выберите Роль" 
                               FontSize="16"
-                        VerticalOptions="Center"
-                        HorizontalOptions="Center"
+                        VerticalOptions="Fill"
+                        HorizontalOptions="Fill"
                         HeightRequest="20"
                         WidthRequest="310"
                         SizeChanged="header_SizeChanged"
-                        Margin="10"
+                        Margin="0, 0, 0,0"
                        />
                         <Picker x:Name="languagePicker1" 
                        SelectedIndexChanged ="languagePicker1_SelectedIndexChanged"
-                       VerticalOptions="Center"
-                       HorizontalOptions="Center"
+                       VerticalOptions="Fill"
+                       HorizontalOptions="Fill"
                        HeightRequest="20"
                        WidthRequest="310"
                        FontSize="20"
-                       Margin="10"
+                      Margin="0,0,0,0"
                        HandlerChanged="header_SizeChanged"
                        ParentChanged="languagePicker_ParentChanged">
                            <Picker.Items>
@@ -86,15 +88,27 @@
                         </Picker>
            
                    </StackLayout>
-      
-                      <Button 
+
+                    <Button 
+                       Text="Предыдущую страницу"
+                       Clicked="Button_Clicked_1"
+                       VerticalOptions="Fill"
+                       HorizontalOptions="Fill"
+                       HeightRequest="20"
+                       WidthRequest="180"
+                        Padding="10"
+                      Margin="-180, 0, 0, 0"
+
+                     />
+                    <Button 
                        Text="Зарегистроваться"
                        Clicked="Button_Clicked"
-                       Margin="30"
-                       VerticalOptions="Center"
-                       HorizontalOptions="Center"
+                       Margin="180, -44, 0, 0"
+
+                       VerticalOptions="Fill"
+                       HorizontalOptions="Fill"
                        HeightRequest="20"
-                       WidthRequest="190"
+                       WidthRequest="170"
             
                    />
                 </StackLayout>
