--- a/Client/NewPage1.xaml
+++ b/Client/NewPage1.xaml
@@ -2,20 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.NewPage1"
-             Title="NewPage1">
+             Title="Вопросы"
+             Loaded="ContentPage_Loaded">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Fill" 
-            HorizontalOptions="Fill" />
-     
+        
         <Entry x:Name="nameEntrу5" FontSize="16"
              Placeholder ="Введите вопросы"
              Margin="10"
              TextChanged="nameEntrу5_TextChanged"
                
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             VerticalOptions="Start"
+             HorizontalOptions="Start"
              HeightRequest="20"
              WidthRequest="310"
              Keyboard ="Text"
@@ -25,8 +22,8 @@
              Placeholder ="Введите ответ"
              Margin="10"
              TextChanged="nameEntrу4_TextChanged"
-             VerticalOptions="Fill"
-             HorizontalOptions="Fill"
+             VerticalOptions="Start"
+             HorizontalOptions="Start"
              HeightRequest="20"
              WidthRequest="310"
              Keyboard ="Text"
@@ -34,41 +31,40 @@
 
         <Button
                 x:Name="CounterLog12"
-                 Text="Создать тест"
-                 SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="CounterLog12_Clicked"
-                 VerticalOptions="Start"
-                HorizontalOptions="CenterAndExpand"
-                FontSize="16" HeightRequest="10"
-                WidthRequest="150"
-                Margin="10"
-                Padding="10"
-        />
-        <Button
-                x:Name="CounterLog13"
-                 Text="Посмотреть список вопросов"
+                 Text="Сохранить вопрос и ответ"
                  SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="CounterLog13_Clicked"
                  VerticalOptions="Start"
-                HorizontalOptions="CenterAndExpand"
+                HorizontalOptions="Start"
                 FontSize="16" HeightRequest="10"
-                WidthRequest="150"
+                WidthRequest="310"
                 Margin="10"
                 Padding="10"
         />
         
         <Button
-                x:Name="CounterLog14"
-                 Text="Посмотреть список ответов"
+                x:Name="CounterLog13"
+                 Text="Посмотреть список вопросов и ответов"
                  SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="CounterLog13_Clicked"
+                  Clicked="CounterLog13_Clicked_1"
                  VerticalOptions="Start"
-                HorizontalOptions="CenterAndExpand"
+                HorizontalOptions="Start"
                 FontSize="16" HeightRequest="10"
-                WidthRequest="150"
+                WidthRequest="350"
                 Margin="10"
                 Padding="10"
         />
+
+        <Label x:Name="header" Text="Выберите вопросы для редактирования " FontSize="18"
+               SizeChanged="header_SizeChanged"
+               
+                       />
+        <StackLayout Padding="7">
+            <Label x:Name="selected"/>
+            <ListView x:Name="usersList" ItemSelected="usersList_ItemSelected" />
+        </StackLayout>
+
+
 
     </VerticalStackLayout>
 </ContentPage>
