--- a/Client/Questin.xaml
+++ b/Client/Questin.xaml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Вопросы"
-             Title="Вопросы"
+             x:Class="Client.Questin"
+             Title="Questin"
              Loaded="ContentPage_Loaded">
     <VerticalStackLayout>
-
 
         <Entry x:Name="nameEntrу5" FontSize="16"
              Placeholder ="Введите вопросы"
@@ -42,30 +41,11 @@
                 Padding="10"
         />
 
-        <Button
-                x:Name="CounterLog13"
-                 Text="Посмотреть список вопросов и ответов"
-                 SemanticProperties.Hint="Counts the number of times you click"
-                  Clicked="CounterLog13_Clicked"
-                 VerticalOptions="Start"
-                HorizontalOptions="Start"
-                FontSize="16" HeightRequest="10"
-                WidthRequest="350"
-                Margin="10"
-                Padding="10"
-        />
-        <Label x:Name="header" Text="Выберите вопросы для редактирования " FontSize="18"   />
-
-        <Label x:Name="headers"  FontSize="18"   />
-
-        <Grid   Margin="500, -280, 0,0">
-
-
-            <Border Stroke="Gray" BackgroundColor="#e1e1e1" WidthRequest="800" HeightRequest="450">
+        <Grid Margin="300, -190, 0,0">
+            <Border Stroke="Gray" BackgroundColor="White" WidthRequest="800" HeightRequest="450" >
                 <ListView x:Name="usersList"  
              
                          
-                  Margin="200, -280, 0,0"
             
                           
                  />
