--- a/Client/Questin.xaml
+++ b/Client/Questin.xaml
@@ -43,14 +43,30 @@
 
         <Grid Margin="300, -190, 0,0">
             <Border Stroke="Gray" BackgroundColor="White" WidthRequest="800" HeightRequest="450" >
-                <ListView x:Name="usersList"  
-             
-                         
-            
-                          
-                 />
 
+
+                
+                    <ListView x:Name="usersList" ItemTapped="usersList_ItemTapped_1">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                       
             </Border>
         </Grid>
+        <Label x:Name="selected" Text="Здесь"
+               Margin="40, -190, 0,0"/>
+        <Entry x:Name="nameEntrу1" FontSize="16"
+             Placeholder ="Для редактирования"
+             Margin="10"
+             TextChanged="nameEntrу1_TextChanged"
+             VerticalOptions="Start"
+             HorizontalOptions="Start"
+             HeightRequest="20"
+             WidthRequest="200"
+             Keyboard ="Text"
+        />
     </VerticalStackLayout>
 </ContentPage>
