--- a/Client/Questin.xaml
+++ b/Client/Questin.xaml
@@ -46,10 +46,12 @@
 
 
                 
-                    <ListView x:Name="usersList" ItemTapped="usersList_ItemTapped_1">
+                    <ListView x:Name="usersList" 
+                              ItemTapped="usersList_ItemTapped_1">
+         
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <TextCell Text="{Binding Name}" />
+                            <TextCell Text= "{Binding}" />
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
